// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DND - PKG: Base Threshold Calculates threshold Offset 1`] = `
Object {
  "horizontal": 134,
  "vertical": 80,
}
`;

exports[`DND - PKG: Base Threshold Calculates thresholds for dragged as dropped 1`] = `
Object {
  "maxBottom": 250,
  "maxLeft": -134,
  "maxRight": 334,
  "maxTop": -30,
}
`;

exports[`DND - PKG: Base Threshold Calculates thresholds for parent as dropped 1`] = `
Object {
  "id-2": Object {
    "maxBottom": 250,
    "maxLeft": -134,
    "maxRight": 334,
    "maxTop": -30,
  },
}
`;
